--- a/config/.env
+++ b/config/.env
@@ -1,4 +1,5 @@
 DATABASE_URL=fstapi_db
-DB_HOST=127.0.0.1
+#DB_HOST=127.0.0.1
+DB_HOST=fivestartelco.com
 DB_USERNAME=fstuser
 DB_PASSWORD=ChangeMe1!
