--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ default: &default
 
 development:
   <<: *default
-  database: myarticles
+  database: fstapi_db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -30,4 +30,8 @@ test:
 
 production:
   <<: *default
+  host: 167.99.127.130
+  username: fstuser
+  password: ChangeMe1!
+  timeout: 5000
   database: fstapi_db
